# creatures-texture-extractor

./: .clang-format  CMakeLists.txt  README.md  main.cpp
